styles.css
:root {
  --color-purple-light: hsl(260, 100%, 95%);
  --color-purple-mid: hsl(264, 82%, 80%);
  --color-purple-deep: hsl(263, 55%, 52%);
  --color-white: hsl(0, 0%, 100%);
  --color-grey-0: hsl(214, 17%, 92%);
  --color-grey-1: hsl(0, 0%, 81%);
  --color-grey-2: hsl(224, 10%, 45%);
  --color-grey-3: hsl(217, 19%, 35%);
  --color-blue-dark: hsl(219, 29%, 14%);
  --color-black: hsl(0, 0%, 7%);
}

/* general  */

html {
  font-family: "Barlow Semi Condensed", system-ui, -apple-system,
    BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
    "Open Sans", "Helvetica Neue", sans-serif;
}

body {
  background-color: var(--color-grey-0);
}

blockquote {
  margin: 0;
  font-size: 0.8rem;
  line-height: 1.5;
}

/* testimonials */

.testimonial__container {
  max-width: 1440px;
  width: calc(100% - 40px);
  margin: 4rem auto;
  display: flex;
  flex-direction: column;
  gap: 30px;
}

.testimonial {
  border-radius: 8px;
  padding: 40px;
  box-shadow: 2px 4px 10px 6px rgba(0, 0, 0, 0.114);
  transition: transform 0.2s;
}

.testimonial:hover,
.testimonial:focus {
  transform: scale(0.98);
}

/* testimonial cards color container */

.testimonial:nth-of-type(1) {
  background-color: var(--color-purple-deep);
  color: var(--color-white);
  position: relative;
}

.testimonial:nth-of-type(1) .testimonial__heading {
  z-index: 1;
  position: relative;
}

#quotes {
  position: absolute;
  right: 20%;
  top: 10%;
  display: none;
}

.testimonial:nth-of-type(2) {
  background-color: var(--color-grey-3);
  color: var(--color-white);
}
.testimonial:nth-of-type(3),
.testimonial:nth-of-type(5) {
  background-color: var(--color-white);
  color: var(--color-grey-3);
}
.testimonial:nth-of-type(4) {
  background-color: var(--color-blue-dark);
  color: var(--color-grey-1);
}

/* testimonial author  */

.testimonial__author {
  display: flex;
  gap: 20px;
  align-items: center;
}

.testimonial__author__img {
  width: 32px;
  height: 32px;
  border-radius: 16px;
}

.testimonial:nth-of-type(1) .testimonial__author__img {
  border: 2px solid var(--color-purple-mid);
}
.testimonial:nth-of-type(2) .testimonial__author__img {
  border: 2px solid var(--color-grey-3);
}
.testimonial:nth-of-type(4) .testimonial__author__img {
  border: 2px solid var(--color-purple-deep);
}

.testimonial__author__name,
.testimonial__author__role {
  line-height: 0.2;
}

.testimonial__author__name {
  font-size: 0.9rem;
  font-weight: 400;
}

.testimonial__author__role {
  font-size: 0.7rem;
}

.testimonial:nth-of-type(1) .testimonial__author__role {
  color: var(--color-grey-0);
}

.testimonial:nth-of-type(2) .testimonial__author__role {
  color: var(--color-grey-1);
}
.testimonial:nth-of-type(4) .testimonial__author__role {
  color: var(--color-white);
}
.testimonial:nth-of-type(4) .testimonial__author__name {
  color: var(--color-white);
}

.testimonial:nth-of-type(5) .testimonial__author__role {
  color: var(--color-grey-2);
}

.testimonial__heading {
  line-height: 1.2;
}

.testimonial__quote {
  font-size: 0.9rem;
}

@media (min-width: 900px) {
  .testimonial__container {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(2, 1fr);
    grid-template-areas:
      "clifford clifford walters whittle"
      "harmon abrams abrams whittle";
  }

  .testimonial:nth-of-type(1) {
    grid-area: clifford;
  }
  .testimonial:nth-of-type(2) {
    grid-area: walters;
  }
  .testimonial:nth-of-type(3) {
    grid-area: harmon;
  }
  .testimonial:nth-of-type(4) {
    grid-area: abrams;
  }
  .testimonial:nth-of-type(5) {
    grid-area: whittle;
  }

  #quotes {
    display: block;
  }
}

